--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Iphone</li>
+		<li data-ns-test="shoppingList">BMW</li>
+		<li data-ns-test="shoppingList">Gucci</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Manali</li>
+		<li data-ns-test="holidayList">Nanital</li>
+		<li data-ns-test="holidayList">Mathura</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
